@@ -1,19 +1,22 @@
-package worldwide.clm.clmwebsite.security.user;
+package worldwide.clm.clmwebsite.security.clmUser;
 
 import lombok.AllArgsConstructor;
-import lombok.Builder;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import worldwide.clm.clmwebsite.data.models.Member;
+import worldwide.clm.clmwebsite.data.models.BioData;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
-@Builder
+
 @AllArgsConstructor
-public class SecureUser implements UserDetails {
-    private final Member user;
+public class ClmUser implements UserDetails {
+    private final BioData user;
+
+    @Override
+    public String getUsername() {
+        return user.getEmailAddress();
+    }
 
     @Override
     public String getPassword() {
@@ -21,20 +24,20 @@ public class SecureUser implements UserDetails {
     }
 
     @Override
-    public String getUsername() {
-        return user.getEmail();
-    }
-
-    @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return user.getRoles ().stream()
-                .map(role -> new SimpleGrantedAuthority(role.name()))
-                .collect(Collectors.toList());
+        return user.getRoles().stream()
+                .map(role->new SimpleGrantedAuthority(role.name()))
+                .toList();
     }
 
     @Override
     public boolean isAccountNonExpired() {
         return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return user.getIsEnabled();
     }
 
     @Override
@@ -47,8 +50,5 @@ public class SecureUser implements UserDetails {
         return true;
     }
 
-    @Override
-    public boolean isEnabled() {
-        return user.isEnabled();
-    }
+
 }
